--- a/web/src/css/sidebar.css
+++ b/web/src/css/sidebar.css
@@ -8,7 +8,6 @@
     left: -100%;
     background-color: #222;
     overflow-x: hidden;
-    padding-top: 10%;
     transition: 0.7s;
 }
 
@@ -90,4 +89,9 @@
 
 .page-header h1 a:hover {
     color: goldenrod;
+}
+
+.sidebar-image{
+    width: 100%;
+
 }
